--- a/mp.metroeguide.web/mp.metroeguide.web.csproj
+++ b/mp.metroeguide.web/mp.metroeguide.web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Antlr" Version="3.5.0.2" />
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
   </ItemGroup>
 
 </Project>
