--- a/mp.metroeguide.web/appsettings.json
+++ b/mp.metroeguide.web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection":"Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
